--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -26,8 +26,8 @@
         }
         
         #maincontent {
-          margin-top: 7em;
-          margin-bottom: -7em;
+          margin-top: 2em;
+          #margin-bottom: -7em;
           .ribbon {
             margin-bottom: 1.3em;
             cursor: default;
@@ -57,7 +57,7 @@
     </div>
     
     <div id="maincontent" class="ui main container">
-      <div class="ui stackable grid">
+      <div class="ui stackable grid" style="padding-top:7em;">
         <%= yield %>
       </div>
     </div>
