--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="ui centered grid container segment">
+<div class="ui centered grid container segment" style='border-right: thick solid #fff;'>
     <div class="five wide column">
       <h2>Cadastro</h2>
 
@@ -29,10 +29,9 @@
     </div>
     
     <div class="field">
-      <%= f.label :cpf %><br />
+      <%= f.label 'CPF - apenas números!' %><br />
       <%= f.text_field :cpf %>
     </div>
-    
     <div class="field">
       <div class="inline fields">
       <label for="discente">Discente da UFPI?</label>
@@ -64,7 +63,7 @@
     </script>
     
     <div id="matricula" class="field" style="display: none;">
-      <%= f.label "Número da mátricula" %><br />
+      <%= f.label "Número da matrícula" %><br />
       <%= f.text_field :matriculation %>
     </div>
     
@@ -97,7 +96,7 @@
     </div>
     
     <div class="actions">
-      <%= f.submit "Cadastrar", class: 'ui button teal' %>
+      <%= f.submit "Inscrever-se", class: 'ui button teal' %>
     </div>
   <% end %>
   
@@ -115,4 +114,24 @@
   .footer{
     display: none;
   }
+<% end %>
+
+<% content_for :sidebar do %>    
+<div class="ui right sidebar visible " style="width:450px;height:50%;">
+    <div class='ui text justify container' style='margin:25%;width:65%;'>
+      <div id="curso0">
+        <h5>Nenhum minicurso selecionado!</h5>
+      </div>
+      <div id="curso1" style='display:none;'>
+        <h5> O lugar do brincar na Educação Infantil – Prof.ª Mestre Alessandra Lopes
+  Castelini</h5>
+        <p>
+         Concepção de infância e criança. As DCNEIS/2009 e a linguagem corporal.
+  Proposta curricular da Educação Infantil. As interações e brincadeiras. A
+  organização espacial das instituições. Os desafios da implementação de jogos e
+  brinquedos. O brinquedo na perspectiva de Vygotsky.
+        </p>
+      </div>
+    </div>
+  </div>
 <% end %>
