--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,7 +23,7 @@ fomentador da práxis educativa, referenciando os desafios globais e locais que 
 agenda pública da educação.</p>
                         <h3 class="ui header">Submissão de trabalhos</h3>
             <p style="text-align: justify;
-text-justify: inter-word;">A submissão de artigos científicos é a forma mais comum de disseminar os avanços alcançados por pesquisas científicas que são desenvolvidas em diversas áreas do conhecimento. Caso queira submeter confira o nosso <a href="edital.pdf" class="ui button tiny teal">VEJA AS NORMAS</a></p>
+text-justify: inter-word;">A submissão de artigos científicos é a forma mais comum de disseminar os avanços alcançados por pesquisas científicas que são desenvolvidas em diversas áreas do conhecimento. Caso queira submeter confira as normas clicando ao lado. <a href="edital.pdf" class="ui button tiny teal">VEJA AS NORMAS</a></p>
           </div>
           <div id="maincontent" class="six wide right floated column" style="margin-top:-20em;">
             <%= image_tag 'fundo.png', class: 'ui large bordered rounded image' %>
@@ -64,18 +64,18 @@ text-justify: inter-word;">O SAPED promoverá palestras com temas atuais e de gr
                 
                 <tr>
                   <td >9h às 12h</td>
-                  <td>Credenciamento (Sala do núcleo de pesquisas em pesquisas e práticas pedagógicas - UFPI/CNPq)</td>
+                  <td>Credenciamento (Sala do núcleo de pesquisas em teorias e práticas pedagógicas - UFPI/CNPq)</td>
                  
                   <td>8h às 12h</td>
-                  <td>Início da exposição de pôsteres (ficarão expostos durante toda a manhã)</td>
+                  <td>Exposição de pôsteres </td>
                   
                   <td>9h às 12h</td>
-                  <td> Comunicação Orais ( Grupos temáticos)</td>
+                  <td> Comunicações orais ( Grupos temáticos)</td>
                 </tr>
                 
                 <tr>
                   <td>14h às 17h</td>
-                  <td>Credenciamento (Sala do núcleo de pesquisas em pesquisas e práticas pedagógicas - UFPI/CNPq)</td>
+                  <td>Credenciamento (Sala do núcleo de pesquisas em teorias e práticas pedagógicas - UFPI/CNPq)</td>
                   
                   <td>14h às 17h</td>
                   <td>Oficinas e minicursos</td>
@@ -122,7 +122,7 @@ Tema: As (ré) formas educacionais e a
 formação política do professor: velhos
 embates, novas estratégias.
 José Deribaldo Gomes dos Santos –
-UECE (Conceição)</td>
+UECE </td>
 
                 <td></td>
                 <td></td>
