add authores aritgo

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -49,7 +49,7 @@ text-justify: inter-word;">O SAPED promoverá palestras com temas atuais e de gr
           <table class="ui celled table" >
               <thead>
                 <tr>
-                  <th rowspan="2" colspan='6' class="center aligned">VII SEMAA ACADÊMICA DE PEGAGOCIA DO CSHNB/UFPI<br>
+                  <th rowspan="2" colspan='6' class="center aligned">VII SEMANA ACADÊMICA DE PEGAGOCIA DO CSHNB/UFPI<br>
                     As (ré)formas educacionais e a formação política do professor: velhos embates, novas estratégias
                   </th>
                 </tr>
