--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -58,6 +58,7 @@
     
     <div id="maincontent" class="ui main container">
       <div class="ui stackable grid" style="padding-top:7em;">
+        <%= render 'layouts/alert_messages' %>
         <%= yield %>
       </div>
     </div>
