--- a/app/views/home/admin_dashboard.html.erb
+++ b/app/views/home/admin_dashboard.html.erb
@@ -9,6 +9,7 @@
           <%= render :partial => 'home/user_table', :locals => { users: @users_unconfirmed,  show_links: true } %>
         </div>
         <div class="ui bottom attached tab segment" data-tab="third">
+            <p><%= link_to 'TRABALHOS', user_poster_path, class: 'ui button positive' %></p>
             <table class="ui fixed single line celled table">
                 <thead>
                     <tr>
