--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -298,7 +298,11 @@ política, partido politico, movimentos sociais, educação e cultura.
               </div>
             </div>
 
-
+      <div class="ui vertical stripe segment" id="minicursos">
+        <div class="ui  container " >
+          
+        </div>
+      </div>
 <script>
   $('a[href^="#"]').on('click', function(e) {
 	  e.preventDefault();
