--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -157,11 +157,12 @@
 </head>
 
 <body>
-  <div class="ui large inverted top menu fixed ">
+  <div class="ui large top menu fixed " style='background-color:#FFC70E;'>
     <div class="ui container ">
       <a class="active item" href="/">Home</a>
       <a class="item" href="#evento">Evento</a>
       <a class="item" href="#palestrantes">Palestrantes</a>
+      <a class="item" href="#minicursos">Minicursos</a>
       <div class="right menu">
         <div id="login" class="item">
           <a class="ui button">Log in</a>
