fixed layout banner

--- a/app/views/home/geral.html.erb
+++ b/app/views/home/geral.html.erb
@@ -1,5 +1,5 @@
-<div class="nine wide column">
-    <div id="regInnkommende" class="ui stacked segment" style='width:170%;'>
+<div class="fourteen wide column">
+    <div id="regInnkommende" class="ui stacked segment" >
         <a class="ui yellow ribbon label">Lista</a>
         <p style="margin-top:2em;">
             <%= render :partial => 'user_table', :locals => { users: User.confirmeds, show_links: false } %>
