--- a/app/views/home/user_poster.html.erb
+++ b/app/views/home/user_poster.html.erb
@@ -1,4 +1,4 @@
-<div class="nine wide column">
+<div class="fourteen wide column">
     <div id="regInnkommende" class="ui stacked segment">
         <a class="ui yellow ribbon label">Lista</a>
         <p style="margin-top:2em;">
