--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -57,7 +57,7 @@
     <p>Conta Corrente: AGUARDE Operação: AGUARDE</p>
     <h5>Enviar email com comprovante para: </h5>
     <p class='ui basic blue button'>
-      <a href="mailto:email@email.com?subject=Comprovante de pagamento&body=Comprovante de pagamento, adicione ao anexo o comprovante!">AGUARDE!</a>
+      <a href="mailto:saped-ufpi.financeira@hotmail.com?subject=Comprovante de pagamento&body=Comprovante de pagamento, adicione ao anexo o comprovante!">saped-ufpi.financeira@hotmail.com</a>
     </p>
   </div>
 </div>
