--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -300,7 +300,11 @@ política, partido politico, movimentos sociais, educação e cultura.
 
       <div class="ui vertical stripe segment" id="minicursos">
         <div class="ui  container " >
-          
+          <h3 class="ui center aligned column header ">Apoiadores:</h3>
+          <div class="ui large images" style='margin:0 auto;'>
+            <%= image_tag 'ufpi.jpeg', class:'ui massive image' %>
+            <%= image_tag 'nutepp.png', class:'ui massive image'  %>
+          </div>
         </div>
       </div>
 <script>
